--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.5.2",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "request": "^2.55.0",
     "socket.io": "^1.3.5",
     "underscore": "^1.8.3"
   }
